//
// ----------------------------------------------------------------
//  Copyright (c) 2023 by cisco Systems, Inc.
//  All rights reserved.
// -----------------------------------------------------------------
//

syntax = "proto3";

package meta;

// The current semantic version of the YangCoverage Metadata.
option go_package = ".;ycov";

message Metadata {

    // Interested device id
    string dut_id              = 1;

    // Name for the current testing being performed.
    string sanity_name         = 2;

    // Test phase the current logs on box were collected in.
    Phase test_phase       = 3;

    // Type of testing the current logs on box were collected in.
    Type  test_type        = 4;

    // Flag indicating processing of log and generating report.
    bool process_log           = 5;
    ProcessLogOptions options  = 6;

}

// Supported test phases for YANG coverage logging
enum Phase {
    UT             = 0;
    IT             = 1;
    DT             = 2;
    CVT            = 3;
    BIT            = 4;
    MTB            = 5;
    SIT            = 6;
    ACCEPTANCE     = 7;
}

// Supported types of testing for Yang coverage logging
enum Type {
    MANUAL      = 0; 
    PRECOMMIT   = 1;
    NIGHTLY     = 2;
    OCCASIONAL  = 3;
}

// XR based parameters to process log and generate report.
message ProcessLogOptions {
    // Path of xr ws 
    string xr_ws                     = 1;

    // The yang models specified are those the report is run against
    repeated string models           = 2;

    // List of prefix xpaths to constrain the calculations and verbose reporting (to paths that match any 1 of the prefixes)
    repeated string prefix_paths     = 3;

    // Indicate whether to include the verbose output
    bool verbose                     = 4;

}
